brocode-rs/tui_app_server/src/bottom_pane/snapshots/brocode_tui_app_server__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap
---
source: tui_app_server/src/bottom_pane/mod.rs
assertion_line: 1475
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interr…
                              
                              
› Ask brocode to do anything  
                              
           100% context left
