brocode-rs/tui_app_server/src/bottom_pane/snapshots/brocode_tui_app_server__bottom_pane__tests__status_only_snapshot.snap
---
source: tui_app_server/src/bottom_pane/mod.rs
assertion_line: 1501
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)               
                                                
                                                
› Ask brocode to do anything                    
                                                
  ? for shortcuts            100% context left
