brocode-rs/tui_app_server/src/bottom_pane/snapshots/brocode_tui_app_server__bottom_pane__tests__status_with_details_and_queued_messages_snapshot.snap
---
source: tui_app_server/src/bottom_pane/mod.rs
assertion_line: 1564
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)               
  └ First detail line                           
    Second detail line                          
                                                
• Queued follow-up messages                     
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit last queued message              
                                                
› Ask brocode to do anything                    
                                                
  ? for shortcuts            100% context left
